--- a/style.css
+++ b/style.css
@@ -57,14 +57,13 @@
     position: absolute;
     font-weight: bold;
     
-    bottom: 120px;
+    bottom: 35%;
     display: flex;
     flex-direction: column;
     max-width: 880px;
     width: 95%;
     padding: 12px 24px;
-    background-color: rgba(255, 82, 2, 0.863);
-    color: white;
+    color: rgba(255, 255, 255);
 }
 
 .wrapper-slogan h1{
@@ -163,6 +162,11 @@
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.911);
 }
 
+.secao-servicos li h3{
+    font-size: 20px;
+    margin-bottom: 8px;
+    text-transform: uppercase;
+}
 
 .faq{
     display: flex;
@@ -178,7 +182,7 @@
   }
   
   .wrapperPergunta{
-    width: 800px;
+    width: 990px;
     position: relative;
   }
   
