--- a/reset.css
+++ b/reset.css
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Fira Sans', sans-serif;
-    color: white;
+   
   }
   
   html {
@@ -17,7 +17,7 @@
     font-size: 1rem;
     line-height: 1.5;
     color: #333;
-    background-color: #070353ef;
+    background-color: #fff;
   }
   
   /* Elementos HTML padrão */
