--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@
     align-items: end;
     justify-content: space-between;
     height: 300px;
-    background-color:rgb(255, 82, 2) ;
+    background-color:rgba(16, 23, 88, 0.288) ;
     color: white;
     max-width: 560px;
     padding: 24px 18px;
@@ -164,7 +164,7 @@
 .secao-servicos li{
     max-width: 320px;
     padding: 16px;
-    background-color:rgb(255, 82, 2) ;
+    background-color:rgba(16, 23, 88, 0.288) ;
     color: white;
     border-radius: 0 24px;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.911);
@@ -198,7 +198,7 @@
     padding: 8px 4px;
     display: flex;
     justify-content: space-between;
-    border-bottom: 4px solid rgb(255, 82, 2);
+    border-bottom: 4px solid rgba(16, 23, 88, 0.288);
     transition: 0.3s ease;
   }
   
@@ -283,7 +283,7 @@
     padding: 12px;
    /* background-color: #070353ef; */
     border: none;
-    border-bottom: solid 4px rgb(255, 82, 2);
+    border-bottom: solid 4px rgba(16, 23, 88, 0.288);
 }
 
 .form-field{
@@ -297,7 +297,7 @@
     height: 125px;
     padding: 12px;
     border: none;
-    border-bottom: solid 4px rgb(255, 82, 2);
+    border-bottom: solid 4px rgba(16, 23, 88, 0.288);
 }
 
 input::placeholder, textarea::placeholder{
@@ -309,7 +309,7 @@ input::placeholder, textarea::placeholder{
 .text-contact{
     max-width: 380px;
     padding: 12px;
-    background-color:rgb(255, 82, 2) ;
+    background-color:rgba(16, 23, 88, 0.288) ;
     color: white;
     border-radius: 6px;
     box-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgba(0, 0, 0, 0.911);
@@ -336,7 +336,7 @@ input::placeholder, textarea::placeholder{
 .btn-send{
     margin-top: 16px;
     color: white;
-    background-color:rgb(255, 82, 2) ;
+    background-color:rgba(16, 23, 88, 0.288);
     border: none;
     font-size: 18px;
     width: 120px;
