--- a/style.css
+++ b/style.css
@@ -346,15 +346,16 @@ input::placeholder, textarea::placeholder{
 
 
 footer {
-    display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-    height: 8vh;
+    min-height: 8vh;
     background-color: black;
 }
 
 footer p{
-    padding: 8px;
+    text-align: center;
+    display: block;
+    padding: 8px 8px 0 8px;
     margin: 0;
 }
