--- a/reset.css
+++ b/reset.css
@@ -10,6 +10,7 @@
   
   html {
     font-size: 16px;
+    width: 100%;
   }
   
   body {
@@ -17,6 +18,7 @@
     font-size: 1rem;
     line-height: 1.5;
     color: #333;
+    width: 100%;
   }
   
   /* Elementos HTML padrão */
