--- a/style.css
+++ b/style.css
@@ -187,6 +187,7 @@
 
 .secao-servicos ul{
     display: flex;
+    width: 100%;
     flex-wrap: wrap;
     padding: 12px;
     gap: 18px;
@@ -194,7 +195,8 @@
 }
 
 .secao-servicos li{
-    max-width: 320px;
+    max-width: 360px;
+    width: 95%;
     padding: 16px;
     background-color:rgba(16, 23, 88, 0.288) ;
     color: white;
@@ -392,17 +394,74 @@ input::placeholder, textarea::placeholder{
     border-radius: 4px;
 }
 
-footer {
+.section-footer{
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    color: white;
-    min-height: 8vh;
-    background-color: black;
+    background-color: #010b14;
+    color: rgba(255, 255, 255, 0.486);
 }
 
-footer p{
-    text-align: center;
-    display: block;
-    padding: 8px 8px 0 8px;
-    margin: 0;
+.infos-footer{
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    align-items: center;
+    margin: 12px auto;
+    gap: 25px;
+    flex-wrap: wrap;
+}
+
+.infos-footer span{
+    display: inline-block;
+    margin-bottom: 8px;
+    font-weight: 700;
+    letter-spacing: 1px;
+}
+
+.infos-footer p, .infos-footer a{
+    font-weight: 500;
+}
+
+.address{
+    width: 200px;
+}
+
+.contact-footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    
+    height: 140px;
+}
+
+
+
+.contact-footer a:hover{
+   color: #fff;
+}
+
+.cnpj{
+    color: rgba(255, 255, 255, 0.486);
+    margin-right: 50px;
+    margin-bottom: 25px;
+}
+
+.socials-media{
+    display: flex;
+    flex-direction: column;
+    font-size: 28px;
+    margin-left: 54px;
+    gap: 5px;
+    cursor: pointer;
+}
+
+.fa-instagram:hover, .fa-facebook-square:hover, .fa-linkedin:hover{
+    color: #fff;
+}
+
+.logo-footer{
+    height: 200px;
+    opacity: 0.75;
+    margin-top: 64px;
 }
