--- a/sobre.css
+++ b/sobre.css
@@ -4,17 +4,20 @@
     justify-content: center;
     gap: 48px;
     align-items: flex-start;
-    margin-top: 8%;
+    margin-top: 10%;
 }
 
 .wrapper-sobre{
-    max-width: 800px;
-    background-color: rgba(16, 23, 88, 0.288);
-    color: white;
+    display: flex;
+    flex-direction: column;
+    max-width: 900px;
+    width: 95%;
     padding: 24px;
     border-radius: 32px 0 32px 0;
     margin-bottom: 48px;
 }
+
+
 
 .container-pagina-sobre{
     display: flex;
@@ -23,3 +26,32 @@
     gap: 24px;
 }
 
+.wrapper-sobre h1, h2, h3{
+    text-transform: uppercase;
+    margin-top: 12px;
+}
+
+
+.wrapper-sobre ul h4{
+    display: inline;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.visao-valores{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.visao-valores div{
+    min-width: 320px;
+    width: 50%;
+}
+
+.visao-valores img{
+    width: 90%;
+}
+
+.motivos-contato{
+    display: flex;
+}
