--- a/sobre.css
+++ b/sobre.css
@@ -4,7 +4,7 @@
     justify-content: center;
     gap: 48px;
     align-items: flex-start;
-    margin-top: 10%;
+    margin-top: 12vh;
 }
 
 .wrapper-sobre{
